fix img problem
okkk

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     <div class="header__heroArea--image">
-                        <img src="img/P1.png" alt="">
+                        <img src="img/p1.png" alt="">
                     </div>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                 </div> -->
                 <div class="about__boxs">
                     <div class="about__boxs__leftSide">
-                        <img src="img/P1.png" alt="">
+                        <img src="img/p1.png" alt="">
                     </div>
                     <div class="about__boxs__rightSide">
                         <div class="about__boxs__rightSide--descr">
